# openapi/webhook-api-models-v1.yaml
@@ -56,6 +56,11 @@ definitions:
         description: Determines what events the hook is triggered for. The existing event array is overwritten with the values contained in this request.
       target:
         $ref: '#/definitions/WebhookTarget'
+      reseller:
+        type: boolean
+        default: true
+        description: |
+          Determines if the webhook is a reseller webhook. If set to true, webhooks are only triggered for bookings where the webhook owner is the reseller (itinerary owner). If set to false, webhooks are only triggered for bookings which contain one or more components sold by the webhook owner.
 
   WebhookUpdateRequest:
     type: object
@@ -97,6 +102,11 @@ definitions:
         description: Determines what events the hook is triggered for. The existing event array is overwritten with the values contained in this request.
       target:
         $ref: '#/definitions/WebhookTarget'
+      reseller:
+        type: boolean
+        default: true
+        description: |
+          Determines if the webhook is a reseller webhook. If set to true, webhooks are only triggered for  the reseller's own bookings. If set to false, webhooks are triggered for all bookings which contain components sold by the seller.
 
   #################################################################################################
   #
@@ -145,6 +155,11 @@ definitions:
         type: string
         description: |
           The timestamp when the webhook was modified the last time. A "date-time" as defined by https://xml2rfc.tools.ietf.org/public/rfc/html/rfc3339.html#anchor14
+      reseller:
+        type: boolean
+        default: true
+        description: |
+          Determines if the webhook is a reseller webhook. If set to true, webhooks are only triggered for  the reseller's own bookings. If set to false, webhooks are triggered for all bookings which contain components sold by the seller.
 
   WebhookTarget:
     type: object
